fixed minor alignment issues

--- a/Frontend/across/src/assets/css/Header.css
+++ b/Frontend/across/src/assets/css/Header.css
@@ -107,7 +107,7 @@
 	justify-content: center;
 	gap: 1.5rem;
 	transition: 1s;
-  background: #fff;
+  background: rgba(255, 255, 255, 1);
 	}
 
   .header__links {
@@ -141,6 +141,6 @@
     display: block;
 		position: absolute;
 		top: 1rem;
-		right: 2rem;
+		right: 1rem;
 	}  
 }
